changed output wrap up

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
           </div>
           <br>
           <button class="btn btn-primary">Generate</button>
-          <br>
-          <p class="result"></p>
+          <br><br>
+          <div class="result" style="  width: 666px;
+          word-break: break-all;
+          white-space: normal;"></div>
         </div>
       </div>
     </div>
